automatically backed up by learn

--- a/app/views/schoolclasses/new.html.erb
+++ b/app/views/schoolclasses/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for schoolclass_path(@schoolclass) do %>
+<%= form_for school_class_path(@schoolclass) do %>
   <label>Post title:</label><br>
   <%= text_field :title %><br>
 
