automatically backed up by learn

--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,10 +1,10 @@
 <h3>Students Form</h3>
 
 <%= form_for(@student) do |s| %>
-  <label>Class Title:</label><br>
+  <label>First Name:</label><br>
   <%= s.text_field :first_name %><br>
 
-  <label>Room Number:</label><br>
+  <label>Last Name:</label><br>
   <%= s.text_field :last_name %><br>
 
   <%= s.submit %>
