automatically backed up by learn

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,4 +1,4 @@
 <% @students.each do |s| %>
-  <div><%= s.title %></div>
-  <div><%= s.room_number %></div>
+  <div><%= s.first_name %></div>
+  <div><%= s.last_name %></div>
 <% end %>
