automatically backed up by learn

--- a/app/views/schoolclasses/new.html.erb
+++ b/app/views/schoolclasses/new.html.erb
@@ -1,8 +1,8 @@
 <%= form_for school_class_path(@schoolclass) do %>
-  <label>Post title:</label><br>
+  <label>Class Title:</label><br>
   <%= text_field :title %><br>
 
-  <label>Post Description</label><br>
+  <label>Room Number:</label><br>
   <%= text_field :room_number %><br>
 
   <%= submit_tag "Submit SchoolClass" %>
