--- a/app/views/schoolclasses/new.html.erb
+++ b/app/views/schoolclasses/new.html.erb
@@ -1,3 +1,4 @@
+<h1>School Class form</h1>
 <%= form_for school_class_path(@schoolclass) do |s| %>
   <label>Class Title:</label><br>
   <%= s.text_field :title %><br>
