automatically backed up by learn

--- a/app/views/school_classes/new.html.erb
+++ b/app/views/school_classes/new.html.erb
@@ -1,4 +1,4 @@
-<h1>School Class form</h1>
+<h1>School Class Form</h1>
 <%= form_for school_class_path(@schoolclass) do |s| %>
   <label>Class Title:</label><br>
   <%= s.text_field :title %><br>
