--- a/app/views/school_classes/new.html.erb
+++ b/app/views/school_classes/new.html.erb
@@ -1,5 +1,5 @@
 <h1>School Class Form</h1>
-<%= form_for school_class_path(@schoolclass) do |s| %>
+<%= form_for school_class_path(@school_class) do |s| %>
   <label>Class Title:</label><br>
   <%= s.text_field :title %><br>
 
