automatically backed up by learn

--- a/app/views/school_classes/edit.html.erb
+++ b/app/views/school_classes/edit.html.erb
@@ -1,6 +1,6 @@
 <h3>Schoolclasses Form</h3>
 
-<%= form_for(@schoolclass) do |s| %>
+<%= form_for(@school_class) do |s| %>
   <label>Class Title:</label><br>
   <%= s.text_field :title %><br>
 
