automatically backed up by learn

--- a/app/views/school_classes/index.html.erb
+++ b/app/views/school_classes/index.html.erb
@@ -1,4 +1,4 @@
-<% @schoolclasses.each do |s| %>
+<% @school_classes.each do |s| %>
   <div><%= s.title %></div>
   <div><%= s.room_number %></div>
 <% end %>
