--- a/app/views/school_classes/show.html.erb
+++ b/app/views/school_classes/show.html.erb
@@ -1,2 +1,2 @@
-<h1><%= @schoolclass.title %></h1>
-<h3><%= @schoolclass.room_number %></h3>
+<h1><%= @school_class.title %></h1>
+<h3><%= @school_class.room_number %></h3>
