automatically backed up by learn

--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for student_path(@student) do %>
+<%= form_for(@student) do %>
   <label>First Name:</label><br>
   <%= text_field :first_name %><br>
 
